--- a/GDSC/main.html
+++ b/GDSC/main.html
@@ -69,7 +69,7 @@
             
             <button type="button" class="btn btn-dark" id="git"><a class="a" href="https://github.com/rohit27-2">GitHub</a></button>
             <button type="button" class="btn btn-primary" id="insta"><a class="b" href="https://instagram.com/rohitgoud_27"> Instagram</a></button>
-            <button type="button" class="btn btn-info" id="link"><a class="c" href="https://github.com/rohit27-2"></a>LinkedIn</button>
+            <button type="button" class="btn btn-info" id="link"><a class="c" href="https://www.linkedin.com/in/rohit-g-74b9b01b3/"></a>LinkedIn</button>
         </div>
         <h6 id="hh">Made with Love by Rohit.G CSE-A</h6>
     </center>
